gcc/testsuite/rust/rustc/ui/drop/missing-drop-method_dg.rs
struct DropNoMethod;
impl Drop for DropNoMethod {} // { dg-error ".E0046." "" { target *-*-* } }

fn main() {}

